--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -53,7 +53,51 @@ p {
 	font-size: 0.9rem;
 }
 
+.active {
+    background-color: #4b4b4b!important;
+    border-radius: 8px;
+    padding-right: 20px;
+}
+
 .results-info h1 {
 	font-weight: 700;
 	font-size: 1.8rem;
+}
+
+.sort-menu {
+    color: white;
+    font-weight: 500;
+    float: right;
+}
+
+.sort-menu select {
+    background: none;
+    border: none;
+    color: white;
+    font-weight: 700;
+}
+
+.sort-menu option {
+    color: black;
+}
+
+.comic-info img {
+    width: 12rem;
+    height: 15rem;
+}
+
+.comic-info {
+    background-color: #151515;
+    border-radius: 10px;
+    width: 12rem;
+}
+
+.comic-info h1 {
+    font-weight: 800;
+    font-size: 1rem;
+}
+
+.comic-info h2 {
+    font-weight: 500;
+    font-size: 0.8rem;
 }
