--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -59,26 +59,9 @@ p {
 	padding-right: 20px;
 }
 
-.results-info h1 {
+.results-text {
 	font-weight: 700;
 	font-size: 1.8rem;
-}
-
-.sort-menu {
-	color: white;
-	font-weight: 500;
-	float: right;
-}
-
-.sort-menu select {
-	background: none;
-	border: none;
-	color: white;
-	font-weight: 700;
-}
-
-.sort-menu option {
-	color: black;
 }
 
 .comic-info img {
