--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -45,10 +45,9 @@ p {
 	padding: 0;
 }
 
-.box button {
-	background: none;
-	border: none;
-	color: white;
+.category-links {
+	text-decoration: none;
+	text-transform: capitalize;
 	font-weight: 600;
 	font-size: 0.9rem;
 }
@@ -56,10 +55,11 @@ p {
 .active {
 	background-color: #4b4b4b !important;
 	border-radius: 8px;
-	padding-right: 20px;
+	padding: 4px 1.5rem 4px 4px;
 }
 
 .results-text {
+	text-transform: capitalize;
 	font-weight: 700;
 	font-size: 1.8rem;
 }
